1576990468 | 4 files | M bin/version.txt,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_danish.json,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_french.json,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_korean.json
https://steamdb.info/patchnotes/4519560/

--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_danish.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_danish.json
@@ -12,11 +12,11 @@
 	"pairing_nodongles_desc": "SteamVR kunne ikke finde nogen hardware at tilknytte controllere til.",
 	"pairing_nodongles_instr": "Sørg for, at dit headset er tilsluttet.",
 	"pairing_selectdevice_title": "Vælg din controllertype",
-	"pairingdevice_knuckles_controllername": "Valve Index Controller",
+	"pairingdevice_knuckles_controllername": "Valve Index-controller",
 	"pairingdevice_vivewand_shortname": "HTC Vive-controller",
 	"pairingdevice_vivetracker_shortname": "HTC Vive-tracker",
 	"pairingdevice_logitechvrinkpilotedition_shortname": "Logitech VR Ink Pilot Edition",
-	"pairingdevice_a_knuckles_controllername": "en Valve Index Controller",
+	"pairingdevice_a_knuckles_controllername": "en Valve Index-controller",
 	"pairingdevice_a_vivewand_shortname": "en HTC Vive-controller",
 	"pairingdevice_a_vivetracker_shortname": "en HTC Vive-tracker",
 	"pairingdevice_a_logitechvrinkpilotedition_shortname": "en Logitech VR Ink Pilot Edition",
