1578509234 | 66 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_dutch.txt,  M content/vrmonitor/translations/vrmonitor_errors_finnish.txt,  M content/vrmonitor/translations/vrmonitor_errors_turkish.txt,  M content/vrmonitor/translations/vrmonitor_greek.txt,  M content/vrmonitor/translations/vrmonitor_latam.txt,  M content/vrmonitor/translations/vrmonitor_polish.txt,  M content/vrmonitor/translations/vrmonitor_turkish.txt,  M content/vrmonitor/translations/vrmonitor_vietnamese.txt,  M drivers/lighthouse/resources/webinterface/libraries.js,  M drivers/lighthouse/resources/webinterface/pairing.html,  M drivers/lighthouse/resources/webinterface/pairing.js,  M drivers/lighthouse/resources/webinterface/vrwebui_shared.js,  M drivers/oculus/resources/input/vrcompositor_bindings_touch.json,  M resources/config/vrcompositor_bindings_generic_hmd.json,  M resources/config/vrcompositor_bindings_knuckles.json,  M resources/config/vrcompositor_bindings_vive_controlle
https://steamdb.info/patchnotes/4552043/

--- a/content/vrmonitor/translations/vrmonitor_dutch.txt
+++ b/content/vrmonitor/translations/vrmonitor_dutch.txt
@@ -2592,7 +2592,7 @@
 "[english]BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "MenuAction_BluetoothSettings"	"Bluetooth-instellingen"
 "[english]MenuAction_BluetoothSettings"	"Bluetooth Settings"
-"MenuAction_BaseStationSettings"	"Basisstation-instellingen"
+"MenuAction_BaseStationSettings"	"Basisstationinstellingen"
 "[english]MenuAction_BaseStationSettings"	"Base Station Settings"
 "Settings_Bluetooth_Title"	"Bluetooth-instellingen"
 "[english]Settings_Bluetooth_Title"	"Bluetooth Settings"
@@ -2600,5 +2600,7 @@
 "[english]Settings_BaseStations_Title"	"Base Station Settings"
 "Settings_Developer_Title"	"Ontwikkelaarsinstellingen"
 "[english]Settings_Developer_Title"	"Developer Settings"
+"MenuAction_PerformanceGraph"	"Prestatiegrafiek weergeven"
+"[english]MenuAction_PerformanceGraph"	"Display Performance Graph"
 }
 }
