--- a/content/vrmonitor/translations/vrmonitor_vietnamese.txt
+++ b/content/vrmonitor/translations/vrmonitor_vietnamese.txt
@@ -832,6 +832,8 @@
 "[english]PerfTestResults_LabelFidelityLevel"	"Fidelity Level"
 "PerfTestResults_FramesDropped"	"Số khung bị rớt:"
 "[english]PerfTestResults_FramesDropped"	"Frames Dropped:"
+"PerfTestResults_FramesCPUBound"	"Khung hình hạn chế do CPU:"
+"[english]PerfTestResults_FramesCPUBound"	"Frames CPU Bound:"
 "MessageBox_RestartNow"	"Khởi động lại SteamVR"
 "[english]MessageBox_RestartNow"	"Restart SteamVR"
 "Settings_Firmware_UpdateAvailable"	"Có cập nhật mới"
@@ -2334,6 +2336,10 @@
 "[english]VRApplicationError_UnknownProperty"	"Unknown property"
 "VRApplicationError_InvalidParameter"	"Tham số không hợp lệ"
 "[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
+"Settings_Advanced_RefreshRate_NotFound"	"<b>LƯU Ý:</b> Mũ chụp của bạn có hỗ trợ tốc độ làm tươi cao hơn, nhưng driver đồ họa lại không phát hiện được. Xin vui lòng xác thực rằng firmware mũ chụp và driver đồ họa hiện dùng phiên bản mới nhất."
+"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but were not detected by the graphics driver. Please verify your headset firmware and graphics drivers are up to date."
+"Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>LƯU Ý:</b> Mũ chụp của bạn có hỗ trợ tốc độ làm tươi cao hơn, nhưng SteamVR không thể quản lý tốc độ làm tươi khi mũ chụp ở chế độ màn hình mở rộng (extended mode). <a href='vrmonitor://directmode/enable'><span style='color:white;'>Bật chế độ hiển thị trực tiếp.</span></a>"
+"[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
 "oculus_display_lost"	"Máy Oculus đã mất kết nối tới màn hình của nó. Vui lòng kiểm tra kết nối mũ chụp của bạn rồi khởi động lại."
 "[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
 "BS20_UpdateRecovery_FoundStations"	"Đã quét xong.<br><br><font color=#ffffff>Các trạm theo dõi này có cập nhật dang dở.<br><br>Vui lòng chọn một trạm theo dõi và nhấp 'Khôi phục thiết bị' để tiếp tục.</font>"
@@ -2494,6 +2500,14 @@
 "[english]HeadsetView_DebugCommands"	"Open Debug Commands"
 "HeadsetView_HideButtonLabel"	"Ẩn chế độ nhìn VR"
 "[english]HeadsetView_HideButtonLabel"	"Hide VR View"
+"Settings_PerApplication_Reprojection_Header"	"Đệm thêm khung hình"
+"[english]Settings_PerApplication_Reprojection_Header"	"Reprojection"
+"Settings_PerApplication_Reprojection_Checkbox"	"Dùng chế độ đệm thêm khung hình kiểu cũ"
+"[english]Settings_PerApplication_Reprojection_Checkbox"	"Use legacy reprojection mode"
+"Settings_PerApplication_Reprojection_Description"	"Đánh dấu tùy chọn này sẽ tắt đệm thêm không đồng bộ cho sản phẩm này."
+"[english]Settings_PerApplication_Reprojection_Description"	"Checking this option will disable asynchronous reprojection for this title."
+"FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"Có một kết nối USB không ngờ tới trạm theo dõi hiện ngăn cản cập nhật không dây.<br><br><font color=#aaaa00>Vui lòng tháo cáp USB đang cắm vào trạm theo dõi.</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"An unexpected USB connection to the Base Station is preventing the wireless update.<br><br><font color=#aaaa00>Please unplug the USB cable that is plugged into the Base Station.</font>"
 "FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"Một kết nối USB không ngờ với trạm theo dõi đã ngăn việc hoàn thành cập nhật không dây.<ul><li><font color=#aaaa00>Tháo dây nguồn của trạm theo dõi.<li>Tháo dây USB đang cắm vào trạm theo dõi.<li>Chỉ cắm lại dây nguồn trạm theo dõi.<li>Đợi 30 giây để trạm theo dõi hoàn thành cập nhật nội bộ.</font></ul><br>Đèn LED trạm theo dõi có thể tắt trong lúc cập nhật nội bộ.<br>Xin đừng tháo dây hoặc kết nối bất kỳ thứ gì với trạm theo dõi trong quá trình cập nhật."
 "[english]FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
 "Settings_Audio_Device_HMD"	"Mũ chụp VR"
@@ -2522,6 +2536,8 @@
 "[english]BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
 "BS_PromotePowerManagement_ExitNow"	"Thoát ngay (%1)"
 "[english]BS_PromotePowerManagement_ExitNow"	"Exit Now (%1)"
+"FirmwareWizard_UpdateType_WatchmanV3PeripheralUpdate"	"Cập nhật thiết bị ngoại vi"
+"[english]FirmwareWizard_UpdateType_WatchmanV3PeripheralUpdate"	"Peripheral Device Update"
 "BS_PowerManagement_Identify"	"Nhấp để nhận diện trạm theo dõi."
 "[english]BS_PowerManagement_Identify"	"Click to identify Base Station."
 "BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 cần được cập nhật để bật tính năng nhận diện thiết bị."
@@ -2536,5 +2552,7 @@
 "[english]Settings_BaseStations_Title"	"Base Station Settings"
 "Settings_Developer_Title"	"Thiết lập nhà phát triển"
 "[english]Settings_Developer_Title"	"Developer Settings"
+"MenuAction_PerformanceGraph"	"Bật đồ thị hiệu năng"
+"[english]MenuAction_PerformanceGraph"	"Display Performance Graph"
 }
 }
