--- a/resources/webinterface/dashboard/localization/bindingui_english.json
+++ b/resources/webinterface/dashboard/localization/bindingui_english.json
@@ -301,6 +301,37 @@
   "InputDebugger_Unbound": "Unbound",
   "BindingUI_InputDebugger": "Input Debugger",
 
+  "InputDebugger_SelectApplication": "Select a running application",
+  "InputDebugger_WaitingForApp" : "Waiting for update from application",
+  "InputDebugger_ActiveActionSets" : "Active Action Sets",
+  "InputDebugger_NoActiveActionSets" : "Application has no active action sets",
+  "InputDebugger_None": "None",
+  "InputDebugger_ActionSetName": "Action Set",
+  "InputDebugger_SecondaryActionSetName": "Secondary Action Set",
+  "InputDebugger_Device": "Restrict to Device",
+  "InputDebugger_Priority": "Priority",
+  "InputDebugger_ActionManifestFailed": "Unable to load action manifest",
+  "InputDebugger_ActionManifestLoading": "Loading action manifest",
+  "InputDebugger_NoActions" : "Application has no actions",
+  "InputDebugger_FilterDetails" : "Filter details",
+  "InputDebugger_FilterState_Title": "Filter state for %1$s",
+
+  "InputDebugger_Source" : "Source:",
+  "InputDebugger_Binding" : "Binding:",
+  "InputDebugger_Active" : "Active:",
+  "InputDebugger_ActiveOrigin" : "Origin:",
+  "InputDebugger_UpdateTime" : "Last Update:",
+  "InputDebugger_Value" : "Value:",
+  "InputDebugger_ActionUnbound" : "Action is unbound",
+  "InputDebugger_Parameters" : "Parameters:",
+  "InputDebugger_Inputs" : "Inputs:",
+  "InputDebugger_Outputs" : "Outputs:",
+  "InputDebugger_FilterType": "Type:",
+  "InputDebugger_PriorityValue": "(Priority %1$s)",
+  "InputDebugger_Suppressed": "Suppressed",
+
+  "InputDebugger_Priority_Overlay": "Global + %1$s",
+
   "BindingUI_WindowTitle_ControllerSettings": "Controller Settings",
   "BindingUI_WindowTitle_ControllerBinding": "Controller Binding",
   "BindingUI_WindowTitle_ManageTrackers": "Manage Vive Trackers",
@@ -366,7 +397,7 @@
   "Settings_ControllerSettings_Utilities": "Controller Utilities",
   "Settings_General_Cancel": "Cancel",
   "Settings_General_Confirm": "Confirm",
-  "Settings_General_CalibrateThumbstick": "Calibrate",
+  "Settings_General_Calibrate": "Calibrate",
   "Settings_General_NotEnoughSamples" : "Please press up on the thumbstick at least %1$s more times to complete calibration.",
   "Settings_General_InviteMoreSamples" : "Calculated angle of %1$s degrees. Keep pressing up to refine that value or press Confirm to accept this calibration.",
   "Settings_General_LeftThumbstickAngle": "Left Thumbstick Angle: %1$s°",
