--- a/resources/webinterface/dashboard/localization/vrmonitor_brazilian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_brazilian.json
@@ -168,9 +168,9 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Marcar esta opção permitirá especificar uma taxa de atualização diferente da configuração global para este aplicativo.",
 	"Settings_MimeTypes_Pancake_Header": "Seleciona em qual aplicativo iniciar aplicações 2D",
 	"Settings_Camera_EnableCamera": "Ativar câmera",
-	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
+	"Settings_Camera_AllowCameraInDashboard": "Exibir câmera no controle",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "Ativa a janela de uma câmara anexada ao seu controle quando o menu principal estiver aberto.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Exibir câmera nos limites do cômodo",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Ativar visão do cômodo",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Clique duas vezes no botão System a qualquer momento para acessar a visão de cômodo",
@@ -213,10 +213,10 @@
 	"Settings_General_RightThumbstickAngle_NoValue": "Ângulo da alavanca analógica direita",
 	"Settings_Dashboard_ShowProgressIndicator": "Indicador de progresso de pressionar longo",
 	"Settings_Dashboard_Position": "Posição do menu principal",
-	"Settings_Classic": "Classic",
-	"Settings_Near": "Near (beta)",
-	"Settings_DesktopScale": "Desktop Scale",
-	"Settings_DashboardScale": "Dashboard Scale",
+	"Settings_Classic": "Clássicas",
+	"Settings_Near": "Próxima (beta)",
+	"Settings_DesktopScale": "Escala da área de trabalho",
+	"Settings_DashboardScale": "Escala do painel",
 	"SettingsTime_5s": "5 segundos",
 	"SettingsTime_30s": "30 segundos",
 	"SettingsTime_1m": "1 minuto",
@@ -277,7 +277,7 @@
 	"Settings_PerApplication_VideoSettings": "Configurações de vídeo por aplicativo",
 	"Settings_ChooseStartupOverlayApps": "Escolher aplicativos de interface ao iniciar",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Abrir estes aplicativos de interface ao iniciar:",
-	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "Nenhum aplicativo de interface foi encontrado",
 	"Settings_ActiveController": "Controle ativo",
 	"Settings_EditBinding": "Editar este comando",
 	"Settings_EditBinding_ChooseAnother": "Escolher outro",
@@ -289,6 +289,6 @@
 	"Settings_ShowThumbstickSettings": "Editar configurações da alavanca analógica",
 	"Settings_ThumbstickSettings": "Configurações da alavanca analógica",
 	"Settings_Number_Selected": "Selecionados: %1$s",
-	"TestControllerTitle": "Testing Controller %1$s",
-	"TestController_NoController": "Turn on a controller to test it."
+	"TestControllerTitle": "Testando o controle %1$s",
+	"TestController_NoController": "Ligue um controle para testá-lo."
 }
