--- a/resources/webinterface/dashboard/localization/vrmonitor_danish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_danish.json
@@ -133,8 +133,8 @@
 	"Settings_Video_AppResFooter": "Den nuværende indstilling gengiver hvert øje i %1$s",
 	"Settings_Advanced_MotionSmoothing_Header": "Bevægelsesudjævning",
 	"Settings_Advanced_MotionSmoothing_Description": "SteamVR syntetiserer nye billeder for at sikre en god oplevelse, når den kørende applikation ikke kan følge med billedhastigheden.",
-	"Settings_Advanced_MotionSmoothing_Disabled": "Motion smoothing not supported on this GPU / driver version (requires asynchronous reprojection support).",
-	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "Motion Smoothing is not supported on older versions of Windows.",
+	"Settings_Advanced_MotionSmoothing_Disabled": "Bevægelsesudjævning understøttes ikke på denne GPU/driverversion (kræver understøttelse af asynkron genprojicering).",
+	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "Bevægelsesudjævning understøttes ikke på ældre versioner af Windows.",
 	"Settings_Advanced_Supersampling_Auto": "Auto",
 	"Settings_Advanced_Supersampling_Custom": "Tilpasset",
 	"Settings_Advanced_Supersampling_Header": "Gengivelsesopløsning",
@@ -168,9 +168,9 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Hvis dette felt markeres, kan du angive en anden opdateringshastighed end applikationens globale indstilling.",
 	"Settings_MimeTypes_Pancake_Header": "Vælg en applikation, som 2D-applikationer skal startes i",
 	"Settings_Camera_EnableCamera": "Slå kamera til",
-	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
+	"Settings_Camera_AllowCameraInDashboard": "Vis kamera på controller",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "Tænder et kameravindue, som er tilknyttet din controller, når instrumentbrættet vises.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Vis kamera ved rummets grænse",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Slå rumvisning til",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Få adgang til rumvisning når som helst ved at dobbeltklikke på systemknappen",
@@ -216,7 +216,7 @@
 	"Settings_Classic": "Klassisk",
 	"Settings_Near": "Nær (beta)",
 	"Settings_DesktopScale": "Skalering til skrivebord",
-	"Settings_DashboardScale": "Dashboard Scale",
+	"Settings_DashboardScale": "Skalering af dashboard",
 	"SettingsTime_5s": "5 sekunder",
 	"SettingsTime_30s": "30 sekunder",
 	"SettingsTime_1m": "1 minut",
@@ -277,11 +277,11 @@
 	"Settings_PerApplication_VideoSettings": "Videoindstillinger pr. applikation",
 	"Settings_ChooseStartupOverlayApps": "Vælg overlay-apps til opstart",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Start disse overlay-apps ved opstart:",
-	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "Ingen overlayapps blev fundet",
 	"Settings_ActiveController": "Aktiv controller",
 	"Settings_EditBinding": "Rediger denne binding",
 	"Settings_EditBinding_ChooseAnother": "Vælg en anden",
-	"Settings_ShowOldBindingUI": "Show Old Binding UI",
+	"Settings_ShowOldBindingUI": "Vis gamle bindingsgrænseflade",
 	"Settings_ManageVideoSettingsForApp": "Administrer videoindstillinger for:",
 	"Settings_ManageControllerBindingSettingsForApp": "Administrer controller-bindinger for:",
 	"Settings_ActiveControllerBinding": "Aktiv controller-binding",
@@ -289,6 +289,6 @@
 	"Settings_ShowThumbstickSettings": "Rediger styrepindsindstillinger",
 	"Settings_ThumbstickSettings": "Styrepindsindstillinger",
 	"Settings_Number_Selected": "%1$s valgt",
-	"TestControllerTitle": "Testing Controller %1$s",
-	"TestController_NoController": "Turn on a controller to test it."
+	"TestControllerTitle": "Tester controller %1$s",
+	"TestController_NoController": "Tænd en controller for at teste den."
 }
