--- a/resources/webinterface/dashboard/localization/vrmonitor_latam.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_latam.json
@@ -216,7 +216,7 @@
 	"Settings_Classic": "Clásica",
 	"Settings_Near": "Cercana (beta)",
 	"Settings_DesktopScale": "Escala del Escritorio",
-	"Settings_DashboardScale": "Escala de menú principal",
+	"Settings_DashboardScale": "Escala del menú principal",
 	"SettingsTime_5s": "5 segundos",
 	"SettingsTime_30s": "30 segundos",
 	"SettingsTime_1m": "1 minuto",
