--- a/resources/webinterface/dashboard/localization/webhelper_russian.json
+++ b/resources/webinterface/dashboard/localization/webhelper_russian.json
@@ -48,8 +48,8 @@
 	"/user/hand/primary": "Основная рука",
 	"/user/hand/secondary": "Другая рука",
 	"/user/hand/any": "Любая рука",
-	"/user/stylus": "Stylus",
-	"/user/gamepad": "Gamepad",
+	"/user/stylus": "Стилус",
+	"/user/gamepad": "Геймпад",
 	"/user/foot/left": "Левая нога",
 	"/user/foot/right": "Правая нога",
 	"/user/shoulder/left": "Левое плечо",
