--- a/resources/webinterface/dashboard/localization/webhelper_thai.json
+++ b/resources/webinterface/dashboard/localization/webhelper_thai.json
@@ -48,8 +48,8 @@
 	"/user/hand/primary": "มือข้างถนัด",
 	"/user/hand/secondary": "มืออีกข้าง",
 	"/user/hand/any": "มือข้างใดข้างหนึ่ง",
-	"/user/stylus": "Stylus",
-	"/user/gamepad": "Gamepad",
+	"/user/stylus": "สไตลัส",
+	"/user/gamepad": "เกมแพด",
 	"/user/foot/left": "เท้าซ้าย",
 	"/user/foot/right": "เท้าขวา",
 	"/user/shoulder/left": "ไหล่ซ้าย",
