--- a/content/vrmonitor/translations/vrmonitor_polish.txt
+++ b/content/vrmonitor/translations/vrmonitor_polish.txt
@@ -2115,7 +2115,7 @@
 "[english]Settings_GpuInfo_NoHeadset"	"No Headset Detected"
 "QuickCalibrate_GiganticSpace"	"Ogromna przestrzeń"
 "[english]QuickCalibrate_GiganticSpace"	"Gigantic Space"
-"Advanced_PerfGraphInHMD"	"Wyświetlaj wydajność karty graficznej w goglach"
+"Advanced_PerfGraphInHMD"	"Wyświetl wykres wydajności GPU w goglach"
 "[english]Advanced_PerfGraphInHMD"	"Display GPU performance graph in headset"
 "Advanced_ReprojectionOn"	"Reprojekcja wł."
 "[english]Advanced_ReprojectionOn"	"Reprojection On"
@@ -2623,5 +2623,7 @@
 "[english]Settings_BaseStations_Title"	"Base Station Settings"
 "Settings_Developer_Title"	"Ustawienia programistyczne"
 "[english]Settings_Developer_Title"	"Developer Settings"
+"MenuAction_PerformanceGraph"	"Wyświetl wykres wydajności"
+"[english]MenuAction_PerformanceGraph"	"Display Performance Graph"
 }
 }
