--- a/resources/webinterface/dashboard/localization/bindingui_korean.json
+++ b/resources/webinterface/dashboard/localization/bindingui_korean.json
@@ -32,7 +32,7 @@
   "SourceInputMode_Position": "위치",
   "SourceInputMode_Pull": "당기기",
   "SourceInputMode_Force": "강제",
-  "SourceInputMode_Proximity": "Proximity",
+  "SourceInputMode_Proximity": "근접",
   "SourceInputMode_Edit": "수정",
   "SourceInputMode_AddMode": "추가",
   "SourceInputMode_Delete": "삭제",
@@ -103,8 +103,8 @@
   "SourceInputMode_ButtonModeInputForce_Click": "다음에서 클릭 생성:",
   "SourceInputMode_Grab": "잡기",
   "SourceInputMode_CapsenseEnableThreshold": "CapSense 사용 임계 값:",
-  "SourceInputMode_GrabThreshold": "Grab Threshold:",
-  "SourceInputMode_ReleaseThreshold": "Release Threshold:",
+  "SourceInputMode_GrabThreshold": "잡기 임계 값:",
+  "SourceInputMode_ReleaseThreshold": "놓기 임계 값:",
   "SourceInputMode_ForceHoldThreshold": "쥐는 압력 임계 값:",
   "SourceInputMode_ForceReleaseThreshold": "놓는 압력 임계 값:",
   "SourceInputMode_DowngradeSpeed": "속도 저하:",
@@ -282,14 +282,14 @@
   "TrackerEditor_SelectControllerRole": "사용할 손:",
   "DisplaySettings_Title": "디스플레이 설정",
   "DisplaySettings_DisplayBrightness": "디스플레이 밝기",
-  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
+  "DisplaySettings_IndexColumnCorrection": "Index 디스플레이 열 수정",
   "DisplaySettings_ColumnCorrection": "열 수정",
   "DisplaySettings_ColumnCorrectionDesc": "열 수정은 머리를 움직이는 동안 수직 '스크린 도어 효과'를 완화해줍니다. 대부분의 사용자는 이 기능을 미세 조정 0으로 활성화된 상태로 두어야 합니다.",
-  "DisplaySettings_ColumnCorrectionEdit": "Edit",
+  "DisplaySettings_ColumnCorrectionEdit": "편집",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "디스플레이 맞춤 설정을 활성화하려면 펌웨어 업데이트가 필요합니다.",
   "DisplaySettings_EnableColumnCorrection": "열 수정",
-  "DisplaySettings_ColumnCorrectionOff": "Off",
-  "DisplaySettings_ColumnCorrectionAuto": "Auto",
+  "DisplaySettings_ColumnCorrectionOff": "사용 안 함",
+  "DisplaySettings_ColumnCorrectionAuto": "자동",
   "DisplaySettings_AdvancedSettings": "고급 설정",
   "DisplaySettings_ShowAdvancedSettings": "고급 설정 표시",
   "DisplaySettings_HideAdvancedSettings": "고급 설정 숨기기",
@@ -322,9 +322,9 @@
   "Settings_ControllerSettings_Utilities": "컨트롤러 유틸리티",
   "Settings_General_Cancel": "취소",
   "Settings_General_Confirm": "확인",
-  "Settings_General_CalibrateThumbstick": "조정",
-  "Settings_General_NotEnoughSamples": "조정을 완료하려면 최소 %1$s회 이상 엄지스틱을 누르세요.",
-  "Settings_General_InviteMoreSamples": "계산된 각도가 %1$s입니다. 계속 눌러 값을 조정하거나 확인을 눌러 이 조정값을 적용하세요.",
+  "Settings_General_CalibrateThumbstick": "보정",
+  "Settings_General_NotEnoughSamples": "보정을 완료하려면 최소 %1$s회 이상 엄지스틱을 누르세요.",
+  "Settings_General_InviteMoreSamples": "계산된 각도가 %1$s입니다. 계속 눌러 값을 조정하거나 확인을 눌러 이 보정값을 적용하세요.",
   "Settings_General_LeftThumbstickAngle": "왼쪽 엄지스틱 각도: %1$s°",
   "Settings_General_RightThumbstickAngle": "오른쪽 엄지스틱 각도: %1$s°",
   "Settings_General_Reset": "초기화",
